--- a/package.json
+++ b/package.json
@@ -1,34 +1,99 @@
 {
-  "name": "electron-docker",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "Mariner",
+  "version": "1.0.0",
+  "description": "A cross-platform Docker management tool",
+  "author": "Kingcide",
+  "license": "MIT",
+  "main": "dist-electron/main.js",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build && electron-builder",
-    "preview": "vite preview"
+    "build:win": "vue-tsc && vite build && electron-builder --win",
+    "build:mac": "vue-tsc && vite build && electron-builder --mac",
+    "build:linux": "vue-tsc && vite build && electron-builder --linux",
+    "preview": "vite preview",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+    "format": "prettier --write src/",
+    "typecheck": "vue-tsc --noEmit",
+    "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
-    "dockerode": "^4.0.0",
-    "element-plus": "^2.6.1",
-    "pinia": "^2.1.7",
-    "ssh2": "^1.15.0",
-    "vue": "^3.4.21",
-    "xterm": "^5.4.0"
+    "@element-plus/icons-vue": "^2.1.0",
+    "dayjs": "^1.11.9",
+    "dockerode": "^3.3.5",
+    "element-plus": "^2.3.9",
+    "pinia": "^2.1.6",
+    "ssh2": "^1.14.0",
+    "tunnel-ssh": "^5.1.1",
+    "vue": "^3.3.4",
+    "vue-router": "^4.5.0",
+    "xterm": "^5.2.1",
+    "xterm-addon-fit": "^0.7.0",
+    "xterm-addon-search": "^0.12.0",
+    "xterm-addon-web-links": "^0.8.0"
   },
   "devDependencies": {
-    "@types/dockerode": "^3.3.23",
-    "@types/node": "^20.11.30",
-    "@types/ssh2": "^1.11.19",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "electron": "^30.0.1",
-    "electron-builder": "^24.13.3",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.6",
-    "vite-plugin-electron": "^0.28.6",
+    "@types/dockerode": "^3.3.19",
+    "@types/node": "^20.4.8",
+    "@types/ssh2": "^1.11.13",
+    "@types/tunnel-ssh": "^5.0.2",
+    "@types/vue": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "electron": "^25.9.8",
+    "electron-builder": "^24.6.3",
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-vue": "^9.17.0",
+    "prettier": "^3.0.1",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.9",
+    "vite-plugin-electron": "^0.12.0",
     "vite-plugin-electron-renderer": "^0.14.5",
-    "vue-tsc": "^2.0.26"
+    "vue-tsc": "^1.8.8"
   },
-  "main": "dist-electron/main.js"
+  "build": {
+    "appId": "com.yourdomain.electron-docker",
+    "productName": "Docker 管理器",
+    "directories": {
+      "output": "release"
+    },
+    "files": [
+      "dist",
+      "dist-electron"
+    ],
+    "mac": {
+      "category": "public.app-category.developer-tools",
+      "target": [
+        "dmg",
+        "zip"
+      ]
+    },
+    "win": {
+      "target": [
+        "nsis",
+        "portable"
+      ]
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb",
+        "rpm"
+      ],
+      "category": "Development"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
+    },
+    "publish": {
+      "provider": "github",
+      "owner": "yourusername",
+      "repo": "electron-docker"
+    }
+  }
 }
