更改主题风格和UI库，完成初始欢迎界面

--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@mdi/font": "^7.4.47",
     "dayjs": "^1.11.9",
     "dockerode": "^3.3.5",
     "element-plus": "^2.3.9",
     "pinia": "^2.1.6",
+    "sass": "^1.83.1",
+    "sass-loader": "^16.0.4",
     "ssh2": "^1.14.0",
     "tunnel-ssh": "^5.1.1",
     "vue": "^3.3.4",
     "vue-router": "^4.5.0",
+    "vuetify": "^3.7.6",
     "xterm": "^5.2.1",
     "xterm-addon-fit": "^0.7.0",
     "xterm-addon-search": "^0.12.0",
