--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ssh2": "^1.14.0",
     "tunnel-ssh": "^5.1.1",
     "vue": "^3.3.4",
+    "vue-i18n": "^11.0.1",
     "vue-router": "^4.5.0",
     "vuetify": "^3.7.6",
     "xterm": "^5.2.1",
